fix #14 overlap glitch on wide resolution

--- a/both/materialize-tweaks.scss
+++ b/both/materialize-tweaks.scss
@@ -67,7 +67,7 @@
 }
 
 /* custom xxl1 rule */
-@media only screen and (min-width: 2400px) {
+@media only screen and (min-width: 2600px) {
   .row .col.xxl1{
     width:8.3333%;
   }
